<resources>
    <string name="app_name">The Scholars\' Inn</string>

    <string name="login_text">Logged in as:</string>
    <string name="page_name">Scholars\' Inn Coaching System</string>
    <string name="text_class">Class: </string>
    <string name="text_student_name">Name: </string>
    <string name="text_father_name">Father Name:</string>
    <string name="text_total">Total</string>
    <string name="text_subject">Subject: </string>
    <string name="text_teacher">Teacher: </string>
    <string name="text_show">Show</string>
    <string name="text_id">Student ID</string>
    <string name="text_out_of">out of</string>
    <string name="text_attendance">Test/Attendance</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_twitter">Twitter</string>
    <string name="text_teachers">Teachers</string>
    <string name="text_scheduled_tests">Scheduled Tests</string>
    <string name="text_announcement">Announcements</string>
    <string name="text_qualification">Qualification: </string>
    <string name="text_institute">Institute: </string>
    <string name="text_email">Email ID: </string>
    <string name="text_topic">Topic:</string>
    <string name="text_new_ann">New Notification</string>
    <string name="text_test_days">Test Days</string>
    <string name="text_time_table">Time Table</string>
    <string name="text_feature">Features</string>
    <string name="text_phone">Phone:</string>
    <string name="phone_no">021 34920339</string>
    <string name="text_mobile">Mobile:</string>
    <string name="mobile_no">0312-SCHOLAR (7246527)</string>
    <string name="email_coaching">info@thescholarsinn.com</string>
    <string name="text_website">Website:</string>
    <string name="website">www.thescholarsinn.com</string>
    <string name="text_advertisement">No new Advertisement</string>
    <string name="text_new_announcement">No new Announcement</string>
    <string name="text_contact">Contact</string>
    <string name="text_about">About Us</string>
    <string name="text_about_us">The Scholars\' Inn Coaching System is the only system in Liaquatabad which is providing quality education to the students for almost two decades. Strict test system, qualified and enthusiastic teachers and quality notes do great job in making our students secure good grades in examination. More than 70% of our students have secured A-One and A Grades by now in secondary and higher secondary examinations. Our computerized management software and Android App on Play Store also help students in analyzing themselves by generating reports, giving full information about students\' test progress, attendance, fee payment schedule and much more. We not only help students to analyze themselves but also keep informing parents about the performance of their son/daughter in our system by means of Reports, SMS, telephone and Mobile Application.</string>
    <string name="text_time_table_main">Time Table</string>
    <string name="text_call">(021) 34920339</string>
    <string name="text_message">0312-SCHOLAR</string>
    <string name="text_address">800 Block 5 Liaqutabad (Sindhi Hotel) Karachi</string>
    <string name="text_location">The Scholars\' Inn Coaching System\n24.9009124,67.0524547</string>
    <string name="text_website_contact">www.thescholarsinn.com</string>
    <string name="text_coaching_info">
        \t* Computerized Analysis of each student\n
        \t* Strict Weekly Test System\n
        \t* Weekly SMS Reporting\n
        \t* Course completion in time\n
        \t* Quality Notes\n
        \t* Experienced and qualified Teachers\n
        \t* Website\n
        \t* Stand-by Generator\n
        \t* Multimedia Projector\n
        \t* Android Application on Play Store\n
        \t* Past year papers (1985 and onward)\n\n
        and much more for the students of Scholars\' Inn</string>
    <string name="text_email_address">info@thescholarsinn.com</string>
    <string name="text_ok">Ok</string>
</resources>
