<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/text_class"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txtClassName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="11-A (Science)"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/text_subject"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txtSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="Physics"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/text_topic"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txtTopic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="Laws of Motion"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/text_teacher"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/txtTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:text="Atif Ata"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>