<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_class"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/txtClassName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="11-A (Science)"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_student_name"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/txtStudentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="Romana Ejaz"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_father_name"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/txtFatherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="Ejaz AHmed"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/imgShowHide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:src="@drawable/ic_keyboard_arrow_right_white_24dp"/>


        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="17sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="Month"/>

        <TextView
            android:id="@+id/txtTotalPresents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="Presents"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="@string/text_out_of"/>

        <TextView
            android:id="@+id/txtTotalAttendance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="Total"/>

    </LinearLayout>

    <com.arktech.waqasansari.thescholarsinn.ExpandedListView
        android:id="@+id/lstAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"/>

</LinearLayout>